[project]
name = "mlx-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "filetype",
    "mlx",
    "mlx-lm",
    "mlx-vlm",
    "numpy>=2.1.0",
    "pillow",
    "playwright",
    "pypdfium2",
    "readability-lxml",
    "requests",
]

[project.scripts]
mlx-crawler = "mlx_crawler.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlx_crawler"]
